Trying to make style more responsive and get selection to fill the whole container for each character so selection is easier. Having issues because of the form and input since visibility makes an element hidden not remove it from causing issues with spacing.

--- a/style.css
+++ b/style.css
@@ -42,23 +42,16 @@ footer {
     background-color: chartreuse;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 750px) {
 }
 
-@media (min-width: 500px) {
+@media (min-width: 750px) {
     .menu {
         width: 100%;
-        height: 63vh;
+        height: 67vh;
         overflow-y: scroll;
     }
 
-    .char-thumbnail {
-        width: 159px; /*106px;*/
-        height: 158px; /*105px;*/
-        border: 15px solid;
-        color: #ab5042;
-    }
-    
     .separator {
         /* border-left: 6px solid black; */
         margin-left: 20px;
@@ -66,42 +59,81 @@ footer {
         /* height: 100%; */
     }
 
-    #movelist {
-        /* width: 100%; */
+    .char-thumbnail {
+        /* base w&h: 106px, 105px */
+        width: 201px;
+        height: 200px;
+        /* display: block; */
+        margin: 0em;
+        border: 15px solid;
+        color: #ab5042;
     }
 
-    #characterMenu {
-        /* width: 250px; */
-        width: 35vh;
-        height: 67.5vh;
+    #character-select {
+        /* width: 29vw;
+        height: 100%;*/
         background-color: darkgoldenrod;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        /* justify-content: flex-start; */
+        flex-wrap: nowrap;
+        align-items: center;
+        gap: 0;
     }
 
-    #movelistMenu {
-        width: 60vh;
+    #character-menu {
+        width: 30vw;
+        height: 73vh;
+        /* display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        flex-wrap: nowrap;
+        align-items: stretch;
+        gap: 0; */
+    }
+
+    /* #movelist {
+        width: 100%;
+    } */
+
+    #movelist-menu {
+        width: 60vw;
         background-color: chocolate;
     }
 
     ul {
+        width: 60vw;
+        margin: 0em;
+        padding: 0em;
         display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
         list-style: none;
     }
 
     li {
-        margin: 0px 10px;
+        margin: 1em 0.5em;
         /* color: white; */
+    }
+
+    .move-link {
+        background-color: rgb(7, 32, 7);
+        color: rgb(247, 151, 199);
+        border-radius: 10px;
+        padding: 10px;
+        text-decoration: none;
     }
 }
 
 .bottom-left {
     position: absolute;
-    bottom: 5px;
-    left: 40px;
+    bottom: -18px;
+    left: 15px;
     color: white;
     background-color: rgba(0, 0, 0, 0.75);
     white-space: nowrap;
+    font-size: 2em;
 }
 
 #main-content {
